# OI-website

./: .gitignore  README.md  backup-postgres.sh  docker-compose.dev.yaml  docker-compose.yaml  docker.compose.yaml  restore-postgres.sh
app/: README.md  package-lock.json  package.json
app/src/: middleware.ts
backend/: .strapi-updater.json  package-lock.json  package.json
directus-templates/: README.md  base.liquid  booking-confirmation.liquid  booking-confirmed.liquid  booking-received.liquid  inspection-completed.liquid  invoice-notification.liquid  password-reset.liquid  payment-confirmation.liquid  payment-failure.liquid  welcome-email.liquid
form/: .dockerignore  Dockerfile  README.md  env  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  server.js
form/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
form/lib/: env.ts
nginx/: nginx.conf
nginx/conf.d/: directus.conf  (+2 more)
rate_engine/: .dockerignore  Dockerfile  README.md  apartment_pre_settlement.py  app.py  construction_stages.py  defects_investigation.py  dilapidation.py  expert_witness_report.py  insurance_report.py  new_construction_stages.py  pre_purchase.py  pre_sales.py  pyproject.toml
rate_engine_internal/: addons.py  apartment_pre_settlement.py  app.py  building_and_pest.py  defects_investigation.py  dilapidation.py  drug_resistance.py  expert_witness_report.py  insurance_report.py  main.py  new_construction_stages.py  pre_handover.py  pre_purchase.py  pre_sales.py
rate_engine_internal_front/: README.md  SERVICE_FIELDS.md  package-lock.json  package.json
(+184 files in other folders)
